# QuantumX-CLM

./: .env.example  .gitignore  DELIVERABLES.md  DELIVERABLES_CHECKLIST.md  JWT_IMPLEMENTATION_SUMMARY.md  OAUTH_IMPLEMENTATION_SUMMARY.md  README.md  SECURE_CERTIFICATE_STORAGE_IMPLEMENTATION.md
backend/: README.md  __init__.py  __main__.py  alembic_core.ini  alembic_secure.ini  pyproject.toml  requirements.txt  test_certificate_models.py
backend/alembic_core/: env.py  script.py.mako
backend/alembic_core/versions/: 0001_init.py  0002_add_rbac_tables.py  0003_add_certificate_metadata_models.py
backend/alembic_secure/: env.py
backend/alembic_secure/versions/: 0001_init.py
backend/app/: main.py
backend/app/api/: router.py
backend/auth/: ARCHITECTURE.md  AUDIT_QUICK_REFERENCE.md  AUDIT_SERVICE.md  DEPS_README.md  INTEGRATION_GUIDE.md  JWT_DEPENDENCIES_SUMMARY.md  QUICK_START.md  README.md  authorization.py  authorization_examples.py  deps.py  deps_examples.py  router.py
backend/auth/api/: login.py  logout.py  permissions.py  profile.py  refresh.py  register.py  router.py
backend/auth/core/: README.md  jwt_utils.py  jwt_utils_demo.py  security.py
backend/auth/oauth/: api.py  (+7 more)
backend/certificates/: README.md  SECURE_STORAGE_INTERFACE.md  SECURE_STORAGE_QUICK_START.md  __init__.py  interfaces.py  models.py  repository.py  router.py  schemas.py
backend/common/: config.py  db.py  deps.py  lifespan.py  logging.py  models.py
backend/integrations/: router.py
backend/policies/: router.py
backend/tests/: README.md  conftest.py
backend/workflows/: router.py
(+30 files in other folders)
